syntax = "proto3";
package sixnft.nftmngr;

import "google/protobuf/any.proto";
option go_package = "sixnft/x/nftmngr/types";

message NftAttributeValue {
  
  string name = 1; 
  oneof value {
    uint64 number_attribute_value = 2;
    string string_attribute_value = 3;
    bool boolean_attribute_value = 4;
    float float_attribute_value = 5;
  }
  // message NumberAttributeValue {
  //   uint64 value = 1;
  // }
  
  // message StringAttributeValue {
  //   string value = 1;
  // }
  
  // message BooleanAttributeValue {
  //   bool value = 1;
  // }
  
  // message FloatAttributeValue {
  //   float value = 1;
  // }
}
