syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v062;
import "nftmngr/v062/display_option.proto";
import "nftmngr/v062/nft_attribute_value.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v062";

message DefaultMintValue {
  oneof value {
    NumberAttributeValue number_attribute_value = 1;
    StringAttributeValue string_attribute_value = 2;
    BooleanAttributeValue boolean_attribute_value = 3;
    FloatAttributeValue float_attribute_value = 4;
  }
}

message AttributeDefinition {
  
  string name = 1; 
  string data_type = 2; 
  bool required = 3;
  string display_value_field = 4; 
  DisplayOption display_option = 5; 
  DefaultMintValue default_mint_value = 6;
  bool hidden_to_marketplace = 7;
  uint64 index = 8;
}
